--- a/style.css
+++ b/style.css
@@ -11,6 +11,10 @@ html,body{
     overflow-x: hidden;
 }
 
+.pod-logo2{
+    display:none;
+}
+
 body{
     font-family: 'Chivo', sans-serif;
     background-color:#121725;
@@ -89,6 +93,7 @@ body{
     border:none;
     padding-left: 35px;
     padding-right: 55px;
+    font-family: 'Chivo', sans-serif;
     font-size:14px;
     font-weight: 700;
     color:white;
@@ -216,13 +221,9 @@ body{
     }
 }
 
-@media screen and (max-width:480px){
+@media screen and (max-width:480px), screen and (max-width:720px) and (orientation: landscape) {
     .pod-logo{
-        top:50px;
-        left:0;
-        right:0;
-        margin-left:auto;
-        margin-right:auto;
+        display:none;
     }
     .dots-logo{
         display:none;
@@ -233,56 +234,65 @@ body{
         justify-content:center;
         align-items:center;
         max-width: 2560px;
-        height: 100vh;
+        height: auto;
         width: 100%;
         background-image: url('./assets/mobile/image-host.jpg');
         background-size: 100% 100%;
         background-repeat: no-repeat;
         background-position: center;
     }
+    .pod-logo2{
+        display:flex;
+    }
     .card{
         background-color:rgba(18,23,37,0.90);
         width:100%;
         max-width: 2560px;
         margin:0 auto;
-        height:100vh;
+        min-height:100vh;
+        height:100%;
         display:flex;
         flex-direction: column;
         justify-content: center;
         align-items: center;
-        padding:40px 20px 0 20px;
+        padding-top:0;
     }
     .header{
         text-align:center;
         font-size:26px;
         line-height:38px;
+        padding-top:40px;
     }
     .paragraph{
-        margin-top: 20px;
+        margin-top: 0px;
         font-size: 15px;
         line-height: 25px;
         text-align:center;
-        width: 100%;
+        width: 85%;
     }
     .spotify{
-        -webkit-mask-size: 3.5em;
-        mask-size: 3.5em;
-        width: 100%;
+        -webkit-mask-size: 3.5rem;
+        mask-size: 3.5rem;
+        width: 100px;
+        height:100px;
     }
     .apple{
-        -webkit-mask-size: 3.5em;
-        mask-size: 3.5em;
-        width: 100%;
+        -webkit-mask-size: 3.5rem;
+        mask-size: 3.5rem;
+        width: 100px;
+        height:100px;
     }
     .google{
-        -webkit-mask-size: 3.5em;
-        mask-size: 3.5em;
-        width: 100%;
+        -webkit-mask-size: 3.5rem;
+        mask-size: 3.5rem;
+        width: 100px;
+        height:100px;
     }
     .pocket{
-        -webkit-mask-size: 3.5em;
-        mask-size: 3.5em;
-        width: 100%;
+        -webkit-mask-size: 3.5rem;
+        mask-size: 3.5rem;
+        width: 100px;
+        height:100px;
     }
     .mail-button{
         order: 1;
@@ -290,7 +300,7 @@ body{
         flex-direction: column;
         margin-top:20px;
         background-color: rgba(18,23,37,00);
-        width: 100%;
+        width: 90%;
     }
     .mail-button input{
         border-radius: 35px;
@@ -308,4 +318,24 @@ body{
         order: 1;
         padding:0;
     }
+    .logos{
+        width:90%;
+        height:60px;
+        justify-content:center;
+    }
 }
+
+@media screen and (max-width:330px){
+    .header{
+        font-size:22px;
+    }
+} 
+
+@media screen and (max-width:720px) and (orientation: landscape){
+    .landscape-padder{
+        padding-top:40px;
+    }
+    .card{
+        padding-bottom:40px;
+    }
+} 
